--- a/index.html
+++ b/index.html
@@ -168,6 +168,18 @@
             </div>
         </div>
     </section>
+    
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrap">
+                <a href="#" class="footer__logo">All Marketing</a>
+                <div class="contacts">
+                    <a href="#" class="contacts__link">+998 99 123 45 67</a>
+                    <a href="#" class="contacts__email">support@allmarketing.com</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
